--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css">
+    <title>Fonts and Sizing</title>
 </head>
 <body>
-
-    <div class="container">
-        <div class="text-blue-900">
-            <h1>This is blue text</h1>
-        </div>
-    </div>
-    
+    <h1 class="font-bold mx-2 my-3 text-3xl uppercase">This is new Journey</h1>
+    <h1 class="mx-5 font-extralight text-yellow-300">this is me</h1>
+    <h1 class="mx-5 font-sans font-extrabold -tracking-widest">this is me</h1>
+    <h1 class="mx-5 font-black tracking-tighter">this is me</h1>
+    <!-- tarcking classses where used to give space between words -->
 </body>
 </html>
